[v1.11] css hack to prevent the height of the preferences window from cropping content

--- a/chrome/skin/preferences_window.css
+++ b/chrome/skin/preferences_window.css
@@ -27,3 +27,11 @@
 	display:			block;
 	width:				300px;
 }
+
+/*
+ * http://www.tek-tips.com/viewthread.cfm?qid=1627464
+ */
+prefwindow > .paneDeckContainer,
+prefpane > .content-box {
+	overflow:			visible;
+}
